# VCProfileViewer-Biegewinkel

./: .commitlintrc.yaml  .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  commitlint.yml  cpp-lint.yml  gitleaks.yml  secret-scan.yml
include/: jsonplayer.h  mainwindow.h  profilewidget.h  sensorworker.h  types.h  vcprotocol.h
resources/: EULA.txt  resources.qrc
src/: licensemanager.cpp  main.cpp  mainwindow.cpp  profilewidget.cpp  sensorworker.cpp  vcprotocol.cpp
tests/data/: LaserLineData_20250922_125805145274.json  LaserLineData_20250922_125816607128.json  LaserLineData_20250922_125828817101.json  LaserLineData_20250922_125840977146.json  LaserLineData_20250922_125853313540.json  LaserLineData_20250922_125906401454.json  LaserLineData_20250922_125918034809.json  LaserLineData_20250922_125929395525.json  LaserLineData_20250922_125940684561.json  LaserLineData_20250922_125951872480.json  LaserLineData_20250922_130002995635.json  LaserLineData_20250922_130014058032.json  LaserLineData_20250922_130025476308.json  LaserLineData_20250922_130036672985.json  LaserLineData_20250922_130047484309.json  LaserLineData_20250922_130058381097.json  LaserLineData_20250922_130109403512.json  LaserLineData_20250922_130120405935.json  LaserLineData_20250922_130131554861.json  LaserLineData_20250922_130142537912.json
